fixed padding/wrapping issue on time

--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,8 @@ textarea {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 
@@ -53,6 +55,7 @@ textarea {
 
 .saveBtn i:hover {
   font-size: 20px;
+  
 }
 
 /*** OVERWRITE - MEDIA QUERY FOR TABLETS AND SMALLER  ***/
